Fix checkbox alignment my account login

--- a/assets/src/scss/_kahoycrafts.scss
+++ b/assets/src/scss/_kahoycrafts.scss
@@ -293,6 +293,11 @@ div.wpforms-container.newsletter-signup {
         }
     }
 
+    input[type=checkbox] {
+        vertical-align: middle;
+        margin-right: 5px;
+    }
+
 }
 
 /* Html5 Video Element */
